--- a/android/build.gradle
+++ b/android/build.gradle
@@ -15,7 +15,7 @@ android {
       namespace 'studio.midoridesign.gal'
     }
     
-    compileSdk flutter.compileSdkVersion
+    compileSdk 34
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_11
